fix: added spacing above appointments in week

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -96,6 +96,10 @@ body {
   margin-top: 25%;
 }
 
+.timetable-spacer{
+  margin-top: 45%;
+}
+
 .timetable {
   padding: 7px 5px;
   margin-top: 5%;
